--- a/src/components/sections/section-02.html
+++ b/src/components/sections/section-02.html
@@ -1,5 +1,28 @@
 <table class="w-full">
   <tr>
-    <td>section-02</td>
+    <td class="pt-[20px]"></td>
+  </tr>
+  <tr>   
+    <td class="px-[20px] sm:p-[0]"><x-image class="w-[560px]" imgUrl="middle_image.png" href="#"></td>
+  </tr>
+  <tr>
+    <td class="text-mosque text-[24px] leading-[28px] font-bold pt-[30px] pl-[20px] pr-[20px] text-center">Excepteur sint occaecat cupidatat 
+    </td>
+  </tr>
+  <tr>
+    <td class="text-grey1 text-[16px] leading-[19px] font-normal pl-[50px] pt-[25px] pr-[50px] text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</td>
+  </tr>
+  <tr>
+    <td class="pt-[30px] px-[20px] text-center"><x-image class="w-[360px]" imgUrl="cta.png" href="#"></td>
+  </tr>
+  <!-- <tr>
+    <td class="align-center-table px-[20px] pt-[25px] pb-[45px]">
+      <x-button width="360" leading="28" padding="10px 20px" rounded="10" class="font-bold cursor-pointer text-[20px] text-[#ffffff] bg-[#008080]">
+        Ut enim ad minim veniam
+      </x-button>
+    </td>
+  </tr> -->
+  <tr>
+    <td class="pt-[40px]"></td>
   </tr>
 </table>
